# rfnoc-oot-blocks

./: CMakeLists.txt  README.md  ctrl_x440.py  manifest.yml  rfnoc_txrx_fft_block_loopback_200mhz.py  rfnoc_txrx_fft_block_loopback_400mhz.py  tx_x440.py
apps/: CMakeLists.txt
include/rfnoc/oot-blocks/: CMakeLists.txt  aurora_block_control.hpp  config.hpp  demodchest_block_control.hpp
lib/: CMakeLists.txt  aurora_block_control.cpp  demodchest_block_control.cpp
rfnoc/fpga/oot-blocks/: CMakeLists.txt
rfnoc/fpga/oot-blocks/ip/Demodulat_ip_0/: CMakeLists.txt  Demodulat_ip_0.xci  Makefile.inc  generate_demodulat_ip_0_ipcore.tcl
rfnoc/fpga/oot-blocks/ip/Demodulat_ip_0/Demodulat_ip_0/: Demodulat_ip_0.veo  Demodulat_ip_0.vho  Demodulat_ip_0.xci  Demodulat_ip_0.xml  Demodulat_ip_0_stub.v  Demodulat_ip_0_stub.vhdl
rfnoc/fpga/oot-blocks/ip/Demodulat_ip_0/Demodulat_ip_0/hdl/: Demodulat_ip.vhd  Demodulat_ip_SimpleDualPortRAM_generic.vhd  Demodulat_ip_SimpleDualPortRAM_singlebit.vhd  Demodulat_ip_axis_a_master.vhd  Demodulat_ip_axis_a_slave.vhd  Demodulat_ip_dut.vhd  Demodulat_ip_fifo_TLAST_OUT.vhd  Demodulat_ip_fifo_data.vhd  Demodulat_ip_fifo_data_OUT.vhd  Demodulat_ip_fifo_data_OUT_block.vhd  Demodulat_ip_fifo_data_block.vhd  Demodulat_ip_pkg.vhd  Demodulat_ip_reset_sync.vhd  Demodulat_ip_src_CPRemoval_stage1.vhd  Demodulat_ip_src_Complex4Multiply.vhd  Demodulat_ip_src_Complex4Multiply_block.vhd  Demodulat_ip_src_Complex4Multiply_block1.vhd  Demodulat_ip_src_Complex4Multiply_block2.vhd  Demodulat_ip_src_Complex4Multiply_block3.vhd  Demodulat_ip_src_Demodulation_and_Channel_Estimation.vhd  Demodulat_ip_src_Demodulation_and_Channel_Estimation_pkg.vhd  Demodulat_ip_src_HDLFFTShift.vhd  Demodulat_ip_src_HDL_Algorithm.vhd  Demodulat_ip_src_OFDMDemod.vhd  Demodulat_ip_src_OFDM_Channel_Estimator.vhd  Demodulat_ip_src_OFDM_Demodulator.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_1.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_10.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_11.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_12.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_2.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_3.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_4.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_5.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_6.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_7.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_8.vhd  Demodulat_ip_src_RADIX22FFT_CTRL1_9.vhd  Demodulat_ip_src_RADIX22FFT_SDF1_1.vhd  Demodulat_ip_src_RADIX22FFT_SDF1_11.vhd  (+33 more)
rfnoc/fpga/oot-blocks/ip/aurora_100g/: Makefile.inc  aurora_100g.xci
rfnoc/fpga/oot-blocks/rfnoc_block_aurora/: CMakeLists.txt  Makefile  Makefile.srcs  README.md  aurora_core_reset_fsm.sv  aurora_flow_control.sv  aurora_regs_pkg.sv  aurora_rx_datapath.sv  aurora_tx_control.sv  aurora_tx_datapath.sv  aurora_wrapper.sv  noc_shell_aurora.v  rfnoc_block_aurora.sv  rfnoc_block_aurora_all_tb.sv  rfnoc_block_aurora_tb.sv
rfnoc/fpga/oot-blocks/rfnoc_block_aurora/aurora_flow_control_tb/: Makefile  aurora_flow_control_tb.sv  nfc_sim_fsm.sv
rfnoc/fpga/oot-blocks/rfnoc_block_aurora/aurora_tx_control_tb/: Makefile  aurora_tx_control_all_tb.sv  aurora_tx_control_tb.sv
rfnoc/fpga/oot-blocks/rfnoc_block_aurora/constraints/: qsfp0_aurora.xdc  qsfp1_aurora.xdc
rfnoc/fpga/oot-blocks/rfnoc_block_aurora/docs/: RFNoC_block_Aurora_manual.md
rfnoc/fpga/oot-blocks/rfnoc_block_demodchest/: Makefile  Makefile.srcs  noc_shell_demodchest.sv  rfnoc_block_demodchest.sv  rfnoc_block_demodchest_tb.sv
(+28 files in other folders)
