#
# Copyright 2019 Ettus Research, a National Instruments Brand
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

# List all header files here
install(
    FILES
    demodchest_block_control.hpp
    config.hpp
    aurora_block_control.hpp
    DESTINATION include/rfnoc/oot-blocks
    COMPONENT headers
)
